# -*- coding: utf-8 -*-
[metadata]
name = omdbpy
version = 0.1.12
description = A minimalist Python wrapper for the Open Movie Database (OMDb) API (https://www.omdbapi.com/).
long_description = file: README.md
long_description_content_type = text/markdown
keywords = omdb api imdb movies television
maintainer = Blair Gemmer
author = Blair Gemmer
author_email = blair@intelligen.technology
maintainer-email = blair@intelligen.technology
url = https://github.com/blairg23/omdbpy
project_urls =
    Source=https://github.com/blairg23/omdbpy
    Tracker=https://github.com/blairg23/omdbpy/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    requests

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =

[options.extras_require]
testing =
    faker
    pytest-cov
    pytest
    tox

;docs =
;    sphinx >= 2.0.0, < 3
;    towncrier >= 18.5.0
;    pygments-github-lexers >= 0.0.5
;    sphinxcontrib-autoprogram >= 0.1.5

[bdist_wheel]
universal = 1